test/corpus/docs/getting-started/containers.txt
====================|||
Containers
====================|||

apartment.Bedroom.Bathroom -> office.Spare Room.Bathroom: Portal

---|||

(source_file
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new)
      (identifier_new))
    (connection)
    (identifier_chain
      (identifier_new)
      (identifier_new)
      (identifier_new))
    (label)))

====================|||
Base Container Block
====================|||

gcloud: Google Cloud {
  # Block
}

---|||

(source_file
  (declaration
    (identifier)
    (label)
    (block
      (comment))))

====================|||
Container with keyword
====================|||

gcloud: {
  label: Google Cloud
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label)))))

====================|||
Example
====================|||

clouds: {
  aws: AWS {
    load_balancer -> api
    api -> db
  }
  gcloud: Google Cloud {
    auth -> db
  }

  gcloud -> aws
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (connection)
            (identifier))
          (declaration
            (identifier)
            (connection)
            (identifier))))
      (declaration
        (identifier)
        (label)
        (block
          (declaration
            (identifier)
            (connection)
            (identifier))))
      (declaration
        (identifier)
        (connection)
        (identifier)))))

====================|||
Reference parent
====================|||

christmas: {
  presents
}
birthdays: {
  presents
  _.christmas.presents -> presents: regift
  _.christmas.style.fill: "#ACE1AF"
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier))))
  (declaration
    (identifier)
    (block
      (declaration
        (identifier))
      (declaration
        (identifier_chain
          (identifier_new)
          (identifier_new)
          (identifier_new))
        (connection)
        (identifier)
        (label))
      (declaration
        (identifier_chain
          (identifier_new)
          (identifier_new)
          (identifier_new)
          (identifier_new))
        (label)))))
