test/corpus/docs/getting-started/shapes.txt
==================
Shapes
==================

imAShape
im_a_shape
im a shape
i'm a shape
# notice that one-hyphen is not a connection
# whereas, `a--shape` would be a connection
a-shape

---

(source_file
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (comment)
  (comment)
  (declaration
    (identifier)))

==================
Multiple Shapes
==================

SQLite; Cassandra

---

(source_file
  (declaration
    (identifier))
  (declaration
    (identifier)))

==================
Shape and Label
==================

pg: PostgreSQL

---

(source_file
  (declaration
    (identifier)
    (label)))

==================
Subshape
==================

Cloud: my cloud
Cloud.shape: cloud

---

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label)))

==================
Example (summary)
==================

pg: PostgreSQL
Cloud: my cloud
Cloud.shape: cloud
SQLite
Cassandra

---

(source_file
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier)
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier))
  (declaration
    (identifier)))
