test/corpus/docs/imports/usecases/more-examples/template.txt
====================|||
wrapper-template.d2
====================|||

style: {
  fill: "#E3EDE6"
  fill-pattern: dots
  stroke: "#820758"
  stroke-width: 3
  border-radius: 2
  shadow: true
}
label: ""

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label))
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier)
        (label
          (integer)))
      (declaration
        (identifier)
        (label
          (boolean)))))
  (declaration
    (identifier)
    (label)))
