test/corpus/docs/imports/usecases/patterns/modular-classes.txt
====================|||
classes.d2
====================|||

classes: {
  base: {
    style: {
      border-radius: 4
      shadow: true
    }
  }
  error: {
    style.fill: pink
    style.stroke: red
  }
  med: {
    width: 200
    height: 200
    style.font-size: 24
  }
  large: {
    width: 300
    height: 300
    style.font-size: 28
  }
  xlarge: {
    width: 400
    height: 400
    style.font-size: 32
  }
  person: {
    shape: person
    style.stroke-dash: 3
  }
}

---|||

(source_file
  (declaration
    (identifier)
      (block
        (declaration
          (identifier)
          (block
            (declaration
              (identifier)
              (block
                (declaration
                  (identifier)
                  (label
                    (integer)))
                (declaration
                  (identifier)
                  (label
                    (boolean)))))))
        (declaration
          (identifier)
          (block
            (declaration
              (identifier_chain
                (identifier_new)
                (identifier_new))
              (label))
            (declaration
              (identifier_chain
                (identifier_new)
                (identifier_new))
              (label))))
        (declaration
          (identifier)
          (block
            (declaration
              (identifier)
              (label
                (integer)))
            (declaration
              (identifier)
              (label
                (integer)))
            (declaration
              (identifier_chain
                (identifier_new)
                (identifier_new))
              (label
                (integer)))))
        (declaration
          (identifier)
          (block
            (declaration
              (identifier)
              (label
                (integer)))
            (declaration
              (identifier)
              (label
                (integer)))
            (declaration
              (identifier_chain
                (identifier_new)
                (identifier_new))
              (label
                (integer)))))
        (declaration
          (identifier)
          (block
            (declaration
              (identifier)
              (label
                (integer)))
            (declaration
              (identifier)
              (label
                (integer)))
            (declaration
              (identifier_chain
                (identifier_new)
                (identifier_new))
              (label
                (integer)))))
        (declaration
          (identifier)
          (block
            (declaration
              (identifier)
              (label))
            (declaration
              (identifier_chain
                (identifier_new)
                (identifier_new))
              (label
                (integer))))))))

====================|||
main.d2
====================|||

...@classes
user.class: person
error.class: [base; error]
modal.class: [base; med]

user -> app.signup: click
app.signup -> error: invalid fields
app.signup -> modal: continue registration

---|||

(source_file
  (import)
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label
      (label_constraint)
      (label_constraint)))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label
      (label_constraint)
      (label_constraint)))
  (declaration
    (identifier)
    (connection)
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (connection)
    (identifier)
    (label))
  (declaration
    (identifier_chain
      (identifier_new)
      (identifier_new))
    (connection)
    (identifier)
    (label)))
