test/corpus/docs/in-depth/globs.txt
====================|||
Globs
====================|||

iphone 10
iphone 11 mini
iphone 11 pro
iphone 12 mini

*.height: 300
*.width: 140
*mini.height: 200
*pro.height: 400

---|||

(source_file
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier))
  (declaration
    (identifier_chain
      (glob)
      (identifier))
    (label
      (integer)))
  (declaration
    (identifier_chain
      (glob)
      (identifier))
    (label
      (integer)))
  (declaration
    (identifier_chain
      (identifier
        (glob))
      (identifier))
    (label
      (integer)))
  (declaration
    (identifier_chain
      (identifier
        (glob))
      (identifier))
    (label
      (integer))))

====================|||
Globs are case insensitive
====================|||

*kong.style.fill: brown

---|||

(source_file
  (declaration
    (identifier_chain
      (identifier
        (glob))
      (identifier)
      (identifier))
    (label)))

====================|||
Globs can appear multiple times
====================|||

t*h*r.shape: person

---|||

(source_file
  (declaration
    (identifier_chain
      (identifier
        (glob)
        (glob))
      (identifier))
    (label)))

====================|||
Glob connections
====================|||

* -> *: test

---|||

(source_file
  (declaration
    (glob)
    (connection)
    (glob)
    (label)))

====================|||
Glob connections reference
====================|||

(lady* -> barbie)[*].style.stroke: pink

---|||

(source_file
  (declaration
    (connection_reference
      (identifier
        (glob))
      (connection)
      (identifier)
      (connection_identifier
        (glob))
      (identifier)
      (identifier))
    (label)))

====================|||
Scoped globs
====================|||

foods: {
  pizzas: {
    cheese
    *.shape: circle
    pineapple
  }
  humans.* -> pizzas.pineapple: eats
}

---|||

(source_file
  (declaration
    (identifier)
    (block
      (declaration
        (identifier)
        (block
          (declaration
            (identifier))
          (declaration
            (identifier_chain
              (glob)
              (identifier))
            (label))
          (declaration
            (identifier))))
      (declaration
        (identifier_chain
          (identifier)
          (glob))
        (connection)
        (identifier_chain
          (identifier)
          (identifier))
        (label)))))

====================|||
Recursive glob
====================|||

**.style.border-radius: 7
zone-A.** -> load balancer

---|||

(source_file
  (declaration
    (identifier_chain
      (recursive_glob)
      (identifier)
      (identifier))
    (label
      (integer)))
  (declaration
    (identifier_chain
      (identifier)
      (recursive_glob))
    (connection)
    (identifier)))


====================|||
Filters
====================|||

*: {
  &shape: person
}

---|||

(source_file
  (declaration
    (glob)
    (block
      (declaration
        (identifier
          (glob_filter))
        (label)))))

====================|||
Globs as filter values
====================|||

*: {
  &link: *
}

---|||

(source_file
  (declaration
    (glob)
    (block
      (declaration
        (identifier
          (glob_filter))
        (label)))))

====================|||
Inverse filters
====================|||

*: {
  !&shape: person
}

---|||

(source_file
  (declaration
    (glob)
    (block
      (declaration
        (identifier
          (inverse_glob_filter))
        (label)))))

====================|||
Nested globs
====================|||

**: {
  **: {shape: person}
}

---|||
(source_file
  (declaration
    (recursive_glob)
    (block
      (declaration
        (recursive_glob)
        (block
          (declaration
            (identifier)
            (label)))))))

====================|||
Globsl globs
====================|||

***.style.fill: yellow
**.shape: circle
*.style.multiple: true

---|||

(source_file
  (declaration
    (identifier_chain
      (global_glob)
      (identifier)
      (identifier))
    (label))
  (declaration
    (identifier_chain
      (recursive_glob)
      (identifier))
    (label))
  (declaration
    (identifier_chain
      (glob)
      (identifier)
      (identifier))
    (label
      (boolean))))
